--- a/portfolio/framework/css/main.css
+++ b/portfolio/framework/css/main.css
@@ -1,17 +1,11 @@
 /** {
 	border: 1px solid red !important;
 }*/
-/** {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-}*/
-
-/*@media only screen and (max-width: 700px) and (orientation: landscape) {
+@media only screen and (max-width: 700px) and (orientation: landscape) {
 	p {
 		display: none;
 	}
-}*/
+}
 body {
 	font-family: 'Lato', sans-serif;
 	color: #747704;
@@ -33,42 +27,6 @@ body {
 .title-logo {
 	margin-top: 20px;
 }
-/*h1 {
-	margin: 0;
-	display: flex;
-	justify-content: flex-end;
-	font-size: 5em;
-	color: #bcbbbb;
-}
-h2 {
-	margin: 0;
-	display: flex;
-	font-size: 2em;
-}
-h3 {
-	margin: 0;
-	display: flex;
-	font-size: 1.5em;
-	justify-content: center;
-}*/
-/*p {
-	padding: 30px;
-	display: flex;
-}
-a {
-	display: flex;
-	justify-content: center;
-	color: #bcbbbb;
-}*/
-/*hr {
-	border: 0;
-	height: .5em;
-	background: #BCBBBB;
-	color: #BCBBB;
-}*/
-/*.slogan {
-	font-size: 1.5em;
-	color: #747704;
 	display: flex;
 	flex-direction: row-reverse;
 }
@@ -82,41 +40,4 @@ a {
 	margin-bottom: 15px;
 	display: flex;
 	flex-wrap: wrap;
-}*/
-/*.col-1 {
-	width: 8.33%;
-}
-.col-2 {
-	width: 16.66%;
-}
-.col-3 {
-	width: 25%;
-}
-.col-4 {
-	width: 33.33%;
-	padding: 40px;
-}
-.col-5 {
-	width: 41.66%;
-}
-.col-6 {
-	width: 50%;
-}
-.col-7 {
-	width: 58.33%;
-}
-.col-8 {
-	width: 66.66%;
-}
-.col-9 {
-	width: 75%;
-}
-.col-10 {
-	width: 83.33%;
-}
-.col-11 {
-	width: 91.66%;
-}
-.col-12 {
-	width: 100%;
 }*/
