--- a/portfolio/framework/css/main.css
+++ b/portfolio/framework/css/main.css
@@ -1,6 +1,3 @@
-/** {
-	border: 1px solid red !important;
-}*/
 @media only screen and (max-width: 700px) and (orientation: landscape) {
 	p {
 		display: none;
@@ -40,4 +37,4 @@ body {
 	margin-bottom: 15px;
 	display: flex;
 	flex-wrap: wrap;
-}*/
+}
