change font and text color

--- a/portfolio/framework/css/main.css
+++ b/portfolio/framework/css/main.css
@@ -4,8 +4,9 @@
 	}
 }
 body {
-	font-family: 'Lato', sans-serif;
-	color: #747704;
+	/*font-family: 'Lato', sans-serif;*/
+	font-family: 'Roboto Condensed', sans-serif;
+	color: #85866F;
 	font-weight: 300;
 }
 
