--- a/portfolio/framework/css/main.css
+++ b/portfolio/framework/css/main.css
@@ -3,10 +3,21 @@
 		display: none;
 	}
 }
+html {
+	background-color: white;
+	background-image: url(../images/socialimage.jpg);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
 body {
 	/*font-family: 'Lato', sans-serif;*/
 	font-family: 'Roboto Condensed', sans-serif;
-	color: #85866F;
+	/*color: #85866F;*/
 	font-weight: 300;
 }
 
