--- a/portfolio/framework/css/main.css
+++ b/portfolio/framework/css/main.css
@@ -5,7 +5,7 @@
 }
 .container {
 	background-color: white;
-	background-image: url(../images/socialimage.jpg);
+	background-image: url(../images/AdobeStock_74159004_WM.jpeg);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
