--- a/portfolio/framework/css/main.css
+++ b/portfolio/framework/css/main.css
@@ -4,7 +4,15 @@
 	}
 }
 .container {
-	background-color: white;
+	
+}
+body {
+	/*font-family: 'Lato', sans-serif;*/
+	font-family: 'Roboto Condensed', sans-serif;
+	color: orangered;
+	font-weight: 300;
+    background-color: lightgray;
+    /*background-color: white; */
 	background-image: url(../images/AdobeStock_74159004_WM.jpeg);
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -14,15 +22,9 @@
 	-o-background-size: cover;
 	background-size: cover;
 }
-body {
-	/*font-family: 'Lato', sans-serif;*/
-	font-family: 'Roboto Condensed', sans-serif;
-	/*color: #85866F;*/
-	font-weight: 300;
-}
 
 .text-muted {
-	color: #BCBBBB;
+	color: goldenrod;
 }
 
 .text-thin {
